fix repository and route
