# storage/api-docs/api-docs.json
@@ -184,6 +184,50 @@
                     }
                 ]
             }
+        },
+        "/api/access-page": {
+            "get": {
+                "tags": [
+                    "Desafio"
+                ],
+                "summary": "Access Page Table",
+                "description": "Access Page Table",
+                "operationId": "AccessPage",
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "User not authorized. Wrong login or password.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Operation return error messages",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Sorry. Please try again"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
